Fix misalignments in popups and subscribe button hover (#552)
* Fix misalignments in popups and subscribe button hover

* Fix misc padding issues in popups

* Replace url with asset-url for placeholders

* Canceled footer changes

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -833,7 +833,7 @@ textarea
         vertical-align: bottom
   .profile-type-info
     font-size: 12px
-    margin: 20px 0
+    margin: 15px 0 0
     text-align: center
     i.fa.fa-info-circle
       &:before
@@ -909,7 +909,6 @@ footer
         font-size: 10px
 
 #overlay
-  z-index: $deepest_depth + 10000
   background: black
   display: none
   position: fixed
@@ -922,6 +921,7 @@ footer
   -moz-opacity: 0.5
   -khtml-opacity: 0.5
   opacity: 0.7
+  z-index: 2000
 
 .popup
   @include border-radius($border_radius)
